# PyQt_DOOM

./: MANIFEST.in  README.md  main.py  pyproject.toml  requirements.txt
PyQt_DOOM/: PyQt_DOOM.py  __init__.py  map.py  npc.py  object_handler.py  object_renderer.py  player.py  pyqt_doom.ui  raycasting.py  sound.py  sprite_object.py  weapon.py
PyQt_DOOM/src/game_settings/: settings.py  settings.ui
PyQt_DOOM/user_settings/: settings.json
